--- a/man/man1/yaml2resume.1
+++ b/man/man1/yaml2resume.1
@@ -18,7 +18,7 @@ npm\ install\ yaml2resume
 .nf
 \f[C]
 Usage:
-\ \ \ \ yaml2resume\ [\ \-t\ TEMPLATE\ ]\ [\ \-l\ ]
+\ \ \ \ yaml2resume\ [\ \-t\ TEMPLATE\ ]\ [\ \-l\ ]\ [\ \-j\ ]
 \ \ \ \ yaml2resume\ list
 \ \ \ \ yaml2resume\ (\ \-h\ |\ \-\-help\ )
 
@@ -26,11 +26,17 @@ Options:
 \ \ \ \ \-h,\ \-\-help\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ help\ for\ yaml2resume
 \ \ \ \ \-t,\ \-\-template\ TEMPLATE\ \ \ \ \ template\ file\ to\ use\ \ \ \ \ (\ \[aq]latex\-jr\[aq]\ )
 \ \ \ \ \-l,\ \-\-latex\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ compile\ the\ output\ with\ `xelatex`.
+\ \ \ \ \-j,\ \-\-json\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ interpret\ input\ data\ as\ valid\ json
 
 Commands:
 \ \ \ \ list\ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ \ list\ current\ templates
 
-Arguments:
+Description:
+\ \ \ \ This\ command\ expands\ a\ liquid\ template\ (file\ TEMPLATE)\ by\ using
+\ \ \ \ either\ valid\ YAML\ or\ JSON\ read\ from\ stdin.
+
+\ \ \ \ Note:\ if\ TEMPLATE\ starts\ with\ `.`\ or\ `/`\ it\ is\ interpreted
+\ \ \ \ as\ an\ absolute\ file\ instead\ of\ the\ name\ of\ built\-in\ plugin.
 \f[]
 .fi
 .SS Author
@@ -41,3 +47,7 @@ Vittorio Zaccaria
 Released under the BSD License.
 .PP
    *   *   *   *   *
+.SH New features
+.IP \[bu] 2
+add json input and absolute template filenames \-\- Jan 1st
+16 (../../commit/5160a04c4a910820a0ccf8cf7378a5209d62ac13)
