update docs and history.md

--- a/man/man1/yaml2resume.1
+++ b/man/man1/yaml2resume.1
@@ -49,5 +49,8 @@ Released under the BSD License.
    *   *   *   *   *
 .SH New features
 .IP \[bu] 2
+add missing package \-\- Feb 25th
+16 (../../commit/d5120c1f4dfff9bce2d9624df62a617b12166ccc)
+.IP \[bu] 2
 add json input and absolute template filenames \-\- Jan 1st
 16 (../../commit/5160a04c4a910820a0ccf8cf7378a5209d62ac13)
