update docs and history.md

--- a/man/man1/yaml2resume.1
+++ b/man/man1/yaml2resume.1
@@ -59,6 +59,9 @@ add json input and absolute template filenames \-\- Jan 1st
 16 (../../commit/5160a04c4a910820a0ccf8cf7378a5209d62ac13)
 .SH Bug fixes
 .IP \[bu] 2
+prefix with current dir \-\- Mar 16th
+16 (../../commit/09f099d4c336d8d684988d7eea96296c4052da73)
+.IP \[bu] 2
 remove usage of readlocal \-\- Mar 16th
 16 (../../commit/695c0dc70bee823d94b8f27fc9e23c466b404dc2)
 .IP \[bu] 2
